# qmamemenu

./: CMakeLists.txt  manifest.json.in  qmamemenu.apparmor
app/: CMakeLists.txt  Main.qml  RomDelegate.qml  SelectionDelegate.qml  qmamemenu.desktop.in
app/tests/autopilot/: run
app/tests/autopilot/qmamemenu/tests/: __init__.py  test_main.py
backend/: CMakeLists.txt
backend/modules/Qmamemenu/: backend.cpp  backend.h  mame.cpp  mame.h  mamerommodel.cpp  mamerommodel.h  qmldir
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
po/: qmamemenu.boiko.pot
